# AstroFunc

./: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
astrofunc/: Schechter.py  conftest.py
docs/: conf.py  index.rst
docs/astrofunc/: index.rst
licenses/: LICENSE.rst
