[metadata]
name = astrofunc
author = lshuns
author_email = lshuns94@gmail.com
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/lshuns/AstroFunc
description = Functions useful in astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = lshuns/AstroFunc

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy
    pandas
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astrofunc = data/*

[tool:pytest]
testpaths = "astrofunc" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astrofunc/_astropy_init*
    astrofunc/conftest.py
    astrofunc/*setup_package*
    astrofunc/tests/*
    astrofunc/*/tests/*
    astrofunc/extern/*
    astrofunc/version*
    */astrofunc/_astropy_init*
    */astrofunc/conftest.py
    */astrofunc/*setup_package*
    */astrofunc/tests/*
    */astrofunc/*/tests/*
    */astrofunc/extern/*
    */astrofunc/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
